--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "vaul": "^1.1.2",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
