--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.55.0",
     "@tailwindcss/vite": "^4.1.11",
+    "@tiptap/extension-code-block-lowlight": "^3.3.0",
     "@tiptap/extension-color": "^3.2.0",
     "@tiptap/extension-font-family": "^3.2.0",
     "@tiptap/extension-highlight": "^3.2.0",
@@ -37,6 +38,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "highlight.js": "^11.11.1",
+    "lowlight": "^3.3.0",
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
@@ -54,6 +57,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/lowlight": "^0.0.7",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
